# tailvec-rs

./: Cargo.toml  README.md
.github/workflows/: push.yml
src/: drain.rs  lib.rs  retain.rs  tailvec.rs  tests.rs  utils.rs
